--- a/helloDjango.html
+++ b/helloDjango.html
@@ -8,7 +8,7 @@
 <body>
     <h1>hello World</h1>
     <p>welcome to my web site</p>
-    <h2>The world is beautifull</h2>
+    <h2>The world is beautiful</h2>
     
 </body>
 </html>
